--- a/public/index.html
+++ b/public/index.html
@@ -776,7 +776,7 @@ Brightspace after they are made.</p>
 material.</p>
 <p>General information regarding the course, topics covered, required textbooks, course tutors, etc. can be found on the <a href="https://cs.nyu.edu/elearning/CSCI_UA_0002/common_syllabus.php" target="_blank" rel="noopener">Common Course Syllabus</a>.</p>
 <h2 id="office-hours">Office Hours</h2>
-<p>Office hours will be held on Zoom this semester on Tuesdays and Thursdays from 1-3 PM starting on Sept. 6.</p>
+<p>Office hours will be held on Zoom this semester on Tuesdays and Thursdays from 11 AM to 1 PM starting on Sept. 6.</p>
 <p>The Zoom link for office hours is <a href="https://nyu.zoom.us/j/92211652314" target="_blank" rel="noopener">https://nyu.zoom.us/j/92211652314</a> which can also be found in Brightspace under the &ldquo;Zoom&rdquo; tab.</p>
 <p>Please turn your camera on if possible when you connect.</p>
 <p>If you are unable to log on at these times and would like to talk to me, please email me for an appointment.</p>
