--- a/public/index.html
+++ b/public/index.html
@@ -1139,8 +1139,8 @@ Vladimir Havlik (worked with Katherine Chan)
 <tr>
 <td>Tu 11/8</td>
 <td>19</td>
-<td>The &ldquo;list&rdquo; data type; working with lists; sorting lists; getting the maximum and minimum values from a list</td>
-<td>Self-paced learning module #8 and quiz;</td>
+<td>The &ldquo;list&rdquo; data type; working with lists; sorting lists; getting the maximum and minimum values from a list; <a href="https://colab.research.google.com/drive/1TvuiSutQclB3_CKtsAUUVPrL9il8fdR2?usp=sharing" target="_blank" rel="noopener">lecture notebook</a></td>
+<td>Self-paced learning module #8 and quiz</td>
 <td><a href="https://cs.nyu.edu/elearning/CSCI_UA_0002/module09.php" target="_blank" rel="noopener">Self-paced learning module #9</a> and quiz</td>
 <td>Gaddis, Chapter 7</td>
 </tr>
@@ -1155,7 +1155,7 @@ Vladimir Havlik (worked with Katherine Chan)
 <tr>
 <td>Tu 11/15</td>
 <td>21</td>
-<td>Unpacking strings into lists; obtaining string data from the web; file input and output</td>
+<td>Unpacking strings into lists; obtaining string data from the web; file input and output; <a href="https://colab.research.google.com/drive/1OXVV08hFS-BVA9PpLCijIjlhNcxQu_6a?usp=sharing" target="_blank" rel="noopener">lecture notebook</a></td>
 <td>self-paced learning module #9 and quiz</td>
 <td><a href="https://cs.nyu.edu/elearning/CSCI_UA_0002/module10.php" target="_blank" rel="noopener">Self-paced learning module #10</a> and quiz</td>
 <td>Gaddis, Chapter 6</td>
@@ -1171,8 +1171,8 @@ Vladimir Havlik (worked with Katherine Chan)
 <tr>
 <td>Tu 11/22</td>
 <td>23</td>
-<td>The &ldquo;dictionary&rdquo; data structure</td>
-<td>self-paced learning module #10 and quiz;</td>
+<td>The &ldquo;dictionary&rdquo; data structure; <a href="https://colab.research.google.com/drive/1MdRhwHv2Vvu6tPFAEBqoq-aNpywJJgk0?usp=sharing" target="_blank" rel="noopener">lecture notebook</a></td>
+<td>self-paced learning module #10 and quiz</td>
 <td><a href="https://cs.nyu.edu/elearning/CSCI_UA_0002/module11.php" target="_blank" rel="noopener">Self-paced learning module #11</a> and quiz</td>
 <td>Gaddis, Chapter 9</td>
 </tr>
@@ -1195,7 +1195,7 @@ Vladimir Havlik (worked with Katherine Chan)
 <tr>
 <td>Th 12/1</td>
 <td>25</td>
-<td>Object-oriented programming</td>
+<td>Object-oriented programming; <a href="https://colab.research.google.com/drive/1RRSJOQqhX-7S7bL1hv9C9r2AF-VarVl3?usp=sharing" target="_blank" rel="noopener">lecture notebook</a></td>
 <td>Self-paced learning module #11 and quiz</td>
 <td></td>
 <td>Gaddis, Chapter 10</td>
@@ -1225,9 +1225,9 @@ Vladimir Havlik (worked with Katherine Chan)
 <td></td>
 </tr>
 <tr>
-<td>TBA</td>
+<td>W 12/21</td>
 <td>&ndash;</td>
-<td><a href="https://cs.nyu.edu/dynamic/courses/exams/?semester=spring_2022&amp;level=UA" target="_blank" rel="noopener">Final Exam, scheduled by the CS department</a></td>
+<td>Final Exam, Online, 2 PM to 3:50 PM</td>
 <td></td>
 <td></td>
 <td></td>
