--- a/public/index.html
+++ b/public/index.html
@@ -1177,7 +1177,7 @@ Vladimir Havlik (worked with Katherine Chan)
 <td>Gaddis, Chapter 9</td>
 </tr>
 <tr>
-<td>Tu 11/24</td>
+<td>Th 11/24</td>
 <td></td>
 <td>No class, Thanksgiving</td>
 <td></td>
@@ -1188,7 +1188,7 @@ Vladimir Havlik (worked with Katherine Chan)
 <td>Tu 11/29</td>
 <td>24</td>
 <td>Workshop</td>
-<td>Assignment #9 (due F 11/25 at 11:59 PM)</td>
+<td>Assignment #9 (due W 11/30 at 11:59 PM)</td>
 <td>Assignment #10</td>
 <td></td>
 </tr>
