--- a/public/index.html
+++ b/public/index.html
@@ -1220,7 +1220,7 @@ Vladimir Havlik (worked with Katherine Chan)
 <td>Tu 12/13</td>
 <td>28</td>
 <td>Final Exam Review</td>
-<td>Assignment #11 (due before class)</td>
+<td>Assignment #11 (due at 11:59 PM)</td>
 <td></td>
 <td></td>
 </tr>
